added convert button

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         </div>
 
         <div class="button">
-            <button>Clear</button>
+            <button id="convert-btn">Convert</button>
+            <button id="clear-btn">Clear</button>
         </div>
     </div>
     <script src="app.js"></script>
